package app.controllers;

public class OrderController
{

    public void addRoutes()
    {
    }

    private boolean validateOrderIsPaid()
    {
        return false;
    }

    private void requestPaymentByID()
    {
    }

    private void confirmPaymentByID()
    {
    }

    private void sendBOM()
    {
    }

    private void sendPickList()
    {
    }

    private void sendInvoice()
    {
    }

}
