package app.entities;

public class RoofCladdings
{
}
