package app.persistence;

public class MaterialMapper
{
    public Material getMaterial()
    {
    }

    public Material getMaterialByID()
    {
    }

    public void updateMaterial()
    {
    }

    public void updateMaterialByPrice()
    {
    }

    public void addMaterialToDB()
    {
    }

    public void deleteMaterial()
    {
    }

    public List<Material> getAllMaterials()
    {
    }
}
